deploy: caaf030a3208026b9f5a383b555f2371bf395899

--- a/configuration.html
+++ b/configuration.html
@@ -131,7 +131,7 @@ default values.</p>
 <tbody>
 <tr class="row-even"><td><p>PYDM_DEFAULT_PROTOCOL</p></td>
 <td><div class="line-block">
-<div class="line">The default protocol to be used when specifing channels.</div>
+<div class="line">The default protocol to be used when specifying channels.</div>
 <div class="line">This option eliminates the need for users to specify the protocol</div>
 <div class="line">for a given Data Plugin. E.g.: <cite>ca</cite>.</div>
 <div class="line"><strong>Default:</strong> None</div>
