--- a/tutorials/action/designer_main.html
+++ b/tutorials/action/designer_main.html
@@ -297,7 +297,7 @@ display the <code class="docutils literal notranslate"><span class="pre">inline_
 </ol>
 </li>
 <li><p><strong>Step 3.8.</strong></p>
-<p>The eigth widget that we will add is a <code class="docutils literal notranslate"><span class="pre">PyDMEmbeddedDisplay</span></code>, which will
+<p>The eighth widget that we will add is a <code class="docutils literal notranslate"><span class="pre">PyDMEmbeddedDisplay</span></code>, which will
 display the <code class="docutils literal notranslate"><span class="pre">inline_motor.ui</span></code> with information for our second motor axis:</p>
 <ol class="arabic simple">
 <li><p>Drag and drop a <code class="docutils literal notranslate"><span class="pre">PyDMEmbeddedDisplay</span></code> into the <code class="docutils literal notranslate"><span class="pre">Frame</span></code> added in <strong>Step 3.7</strong>.</p></li>
