--- a/tutorials/action/intro_python.html
+++ b/tutorials/action/intro_python.html
@@ -150,7 +150,7 @@
 <p>PyDM supports making displays that are powered by Python scripts.  This is quite
 powerful - you can do anything from generating a simple display at run time
 (from a file or database, for example), up to building entire applications that
-utilize the PyDM widget set.  In additon to this guide, you can look at some of
+utilize the PyDM widget set.  In addition to this guide, you can look at some of
 PyDM’s bundled examples to see how a script-based display works.  In particular,
 the ‘image_processing’ example is a good place to start.</p>
 <section id="building-your-ui-in-designer">
