--- a/tutorials/action/python.html
+++ b/tutorials/action/python.html
@@ -212,7 +212,7 @@ will follow.</p>
 <li><p>The constructor of the class will call the <code class="docutils literal notranslate"><span class="pre">load_data</span></code> method that is
 responsible for opening our database and adding the information to our
 placeholder, <code class="docutils literal notranslate"><span class="pre">self.data</span></code>, for later filtering, as well as the <code class="docutils literal notranslate"><span class="pre">setup_ui</span></code>
-method in which the widgets be constructed and configuered.</p></li>
+method in which the widgets be constructed and configured.</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">minimumSizeHint</span></code> returns the suggested minimum dimensions for the display.</p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">ui_filepath</span></code> will return <code class="docutils literal notranslate"><span class="pre">None</span></code>, as no <code class="docutils literal notranslate"><span class="pre">ui</span></code> file is being used in this
 case.</p></li>
