--- a/widgets/PyDMWidget.html
+++ b/widgets/PyDMWidget.html
@@ -620,7 +620,7 @@ channel displayed on the tool tip.</p>
 </div></blockquote>
 </div>
 <p>A period followed by a field name can retrieve other properties of the channel
-(see the table bellow for all channel properties and associated field names.)</p>
+(see the table below for all channel properties and associated field names.)</p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>If the toolTip property field is:</p>
