--- a/_modules/index.html
+++ b/_modules/index.html
@@ -114,6 +114,7 @@
              
   <h1>All modules for which code is available</h1>
 <ul><li><a href="PyQt5/QtCore.html">PyQt5.QtCore</a></li>
+<li><a href="channel.html">channel</a></li>
 <li><a href="pydm/application.html">pydm.application</a></li>
 <li><a href="pydm/data_plugins.html">pydm.data_plugins</a></li>
 <ul><li><a href="pydm/data_plugins/plugin.html">pydm.data_plugins.plugin</a></li>
