--- a/genindex.html
+++ b/genindex.html
@@ -391,8 +391,12 @@
         <li><a href="widgets/shell_command.html#pydm.widgets.shell_command.PyDMShellCommand.confirmMessage">(pydm.widgets.shell_command.PyDMShellCommand attribute)</a>
 </li>
       </ul></li>
-      <li><a href="widgets/embedded_display.html#pydm.widgets.embedded_display.PyDMEmbeddedDisplay.connect">connect() (pydm.widgets.embedded_display.PyDMEmbeddedDisplay method)</a>
+      <li><a href="channel.html#channel.PyDMChannel.connect">connect() (channel.PyDMChannel method)</a>
+
+      <ul>
+        <li><a href="widgets/embedded_display.html#pydm.widgets.embedded_display.PyDMEmbeddedDisplay.connect">(pydm.widgets.embedded_display.PyDMEmbeddedDisplay method)</a>
 </li>
+      </ul></li>
       <li><a href="widgets/PyDMWidget.html#pydm.widgets.base.PyDMWidget.connection_changed">connection_changed() (pydm.widgets.base.PyDMWidget method)</a>
 
       <ul>
@@ -483,9 +487,11 @@
 </li>
       <li><a href="widgets/frame.html#pydm.widgets.frame.PyDMFrame.disableOnDisconnect">disableOnDisconnect (pydm.widgets.frame.PyDMFrame attribute)</a>
 </li>
-      <li><a href="data_plugins/external_plugins.html#pydm.data_plugins.plugin.PyDMConnection.disconnect">disconnect() (pydm.data_plugins.plugin.PyDMConnection method)</a>
+      <li><a href="channel.html#channel.PyDMChannel.disconnect">disconnect() (channel.PyDMChannel method)</a>
 
       <ul>
+        <li><a href="data_plugins/external_plugins.html#pydm.data_plugins.plugin.PyDMConnection.disconnect">(pydm.data_plugins.plugin.PyDMConnection method)</a>
+</li>
         <li><a href="widgets/embedded_display.html#pydm.widgets.embedded_display.PyDMEmbeddedDisplay.disconnect">(pydm.widgets.embedded_display.PyDMEmbeddedDisplay method)</a>
 </li>
       </ul></li>
@@ -499,10 +505,10 @@
 </li>
       <li><a href="widgets/related_display_button.html#pydm.widgets.related_display_button.PyDMRelatedDisplayButton.displayFilename">displayFilename (pydm.widgets.related_display_button.PyDMRelatedDisplayButton attribute)</a>
 </li>
-      <li><a href="widgets/utilities.html#pydm.widgets.display_format.DisplayFormat">DisplayFormat (class in pydm.widgets.display_format)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="widgets/utilities.html#pydm.widgets.display_format.DisplayFormat">DisplayFormat (class in pydm.widgets.display_format)</a>
+</li>
       <li><a href="widgets/label.html#pydm.widgets.label.PyDMLabel.displayFormat">displayFormat (pydm.widgets.label.PyDMLabel attribute)</a>
 </li>
       <li><a href="widgets/tab_widget.html#pydm.widgets.tab_bar.PyDMTabWidget.documentMode">documentMode (pydm.widgets.tab_bar.PyDMTabWidget attribute)</a>
@@ -1208,6 +1214,8 @@
 </li>
       <li><a href="widgets/byte.html#pydm.widgets.byte.PyDMByteIndicator">PyDMByteIndicator (class in pydm.widgets.byte)</a>
 </li>
+      <li><a href="channel.html#channel.PyDMChannel">PyDMChannel (class in channel)</a>
+</li>
       <li><a href="widgets/checkbox.html#pydm.widgets.checkbox.PyDMCheckbox">PyDMCheckbox (class in pydm.widgets.checkbox)</a>
 </li>
       <li><a href="data_plugins/external_plugins.html#pydm.data_plugins.plugin.PyDMConnection">PyDMConnection (class in pydm.data_plugins.plugin)</a>
@@ -1218,10 +1226,10 @@
 </li>
       <li><a href="widgets/drawing.html#pydm.widgets.drawing.PyDMDrawingArc">PyDMDrawingArc (class in pydm.widgets.drawing)</a>
 </li>
-      <li><a href="widgets/drawing.html#pydm.widgets.drawing.PyDMDrawingChord">PyDMDrawingChord (class in pydm.widgets.drawing)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="widgets/drawing.html#pydm.widgets.drawing.PyDMDrawingChord">PyDMDrawingChord (class in pydm.widgets.drawing)</a>
+</li>
       <li><a href="widgets/drawing.html#pydm.widgets.drawing.PyDMDrawingCircle">PyDMDrawingCircle (class in pydm.widgets.drawing)</a>
 </li>
       <li><a href="widgets/drawing.html#pydm.widgets.drawing.PyDMDrawingEllipse">PyDMDrawingEllipse (class in pydm.widgets.drawing)</a>
